<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="title_activity_download">DownloadActivity</string>
    <string name="select_address">Selecting the server best closed to you</string>
    <string name="not_connection">Request server timeout</string>
    <string name="server_address">Server from <xliff:g id="1">%s</xliff:g> (<xliff:g id="2">%s</xliff:g>) [<xliff:g id="3">%s</xliff:g> km]</string>
    <string name="not_network">Network not currently connected.</string>
    <string name="download_speeed">Speed : </string>
    <string name="band_width_unit"> Mbps</string>
    <string name="sd_video">SD Video</string>
    <string name="hd_video">HD Video</string>
    <string name="fhd_video">FULL HD Video</string>
    <string name="video_content">Support Video : </string>
    <string name="restart">restart</string>
    <string name="title_activity_network_diagnose">NetworkDiagnoseActivity</string>

    <string name="diagnose_network_diy">Diy maintenance</string>
    <string name="diagnose_network_maintenance_guidance">Maintenance guidance</string>
    <string name="diagnose_network_exception_internet">Exception: router access Internet error</string>
    <string name="diagnose_network_exception_tv">Exception: TV access router error</string>
    <string name="diagnose_network_check_router_networking">Check the router for successful networking</string>
    <string name="diagnose_network_check_router_working">Check if the router is working properly</string>
    <string name="diagnose_network_check_router_restart">Try to restart the router</string>
    <string name="diagnose_network_check_tv_networking">Check that the TV is connected to the router</string>

    <string name="diagnose_network">Diagnosing network connection status...</string>
    <string name="diagnose_network_error">Network not connected</string>
    <string name="diagnose_server">Diagnosing server parsing status...</string>
    <string name="diagonse_server_error">Server not connected</string>
    <string name="diagnose_finish">Network diagnosis is completed, good network condition</string>
    <string name="diagnose_network_connect">Network connection status</string>
    <string name="diagnose_network_dns">DNS resolution status</string>
    <string name="diagnose_network_server">Server connection status</string>
    <string name="diagnose_success">finish</string>
    <string name="diagnose_advise">Recommended to check equipment according to the instructions</string>

    <string name="activity_home_memory_manager">Memory Management</string>
    <string name="activity_home_file_manager">File Management</string>
    <string name="activity_home_update_manager">Update Management</string>
    <string name="diagnose_network_title">Network Diagnosis</string>
    <string name="network_speed">Network Speed</string>
    <string name="app_name">TV Assistant</string>

</resources>
