<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/network_home_bg"
    >
    <LinearLayout
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/diagnose_network_title"
            android:textSize="40sp"
            android:textColor="#D3D3D3"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="100dp"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/network_diagnose__bg_highlighted">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/network_diagnose_icon_helios_normal"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.ktc.tvhelper.networkdiagnose.view.LVCircularZoom
                    android:id="@+id/lvzoom1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/tv_error_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_mark"
                    android:visibility="gone"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/network_diagnose__bg_highlighted">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/network_diagnose_icon_network_normal"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.ktc.tvhelper.networkdiagnose.view.LVCircularZoom
                    android:id="@+id/lvzoom2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/network_error_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_mark"
                    android:visibility="gone"/>
            </RelativeLayout>


            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/network_diagnose__bg_highlighted">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/network_diagnose_icon_internet_normal"/>
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="500dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="100dp"
            android:alpha="0.3"
            android:background="#708090"/>

        <LinearLayout
            android:id="@+id/diagnose_network_content_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="visible">
            <TextView
                android:id="@+id/diagnose_exception"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#F8F8FF"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:text="@string/diagnose_network_exception_internet"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="#708090"
                android:textSize="26sp"
                android:text="@string/diagnose_network_maintenance_guidance"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.ktc.tvhelper.networkdiagnose.view.DotView
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textColor="#F8F8FF"
                    android:textSize="26sp"
                    android:textAllCaps="false"
                    android:text="@string/diagnose_network_check_router_networking"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.ktc.tvhelper.networkdiagnose.view.DotView
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#F8F8FF"
                    android:textSize="26sp"
                    android:textAllCaps="false"
                    android:text="@string/diagnose_network_check_router_working"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <com.ktc.tvhelper.networkdiagnose.view.DotView
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#F8F8FF"
                    android:textSize="26sp"
                    android:textAllCaps="false"
                    android:text="@string/diagnose_network_check_router_restart"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/diagnose_network_content_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#F8F8FF"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:text="@string/diagnose_network_exception_tv"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="#708090"
                android:textSize="26sp"
                android:text="@string/diagnose_network_maintenance_guidance"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.ktc.tvhelper.networkdiagnose.view.DotView
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textColor="#F8F8FF"
                    android:textSize="26sp"
                    android:textAllCaps="false"
                    android:text="@string/diagnose_network_check_tv_networking"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.ktc.tvhelper.networkdiagnose.view.DotView
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#F8F8FF"
                    android:textSize="26sp"
                    android:textAllCaps="false"
                    android:text="@string/diagnose_network_check_router_working"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diagnose_advise"
            android:textColor="#F8F8FF"
            android:textSize="20sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/diagnose_finish_btn"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/diagnose_button"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:text="@string/diagnose_success"
            android:textColor="#F8F8FF"
            android:textSize="30sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/restart_diagnose_btn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/diagnose_button"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:text="@string/restart"
            android:textColor="#F8F8FF"
            android:textSize="30sp"
            android:textAllCaps="false"/>

    </LinearLayout>
</LinearLayout>
