<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/network_diagnose_bg"
    >
    <LinearLayout
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:text="@string/diagnose_network_title"
        android:textSize="50sp"
        android:textColor="#D3D3D3"/>
    <TextView
        android:id="@+id/network_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="left"
        android:alpha="0.90"
        android:textSize="30sp"
        android:textColor="#D3D3D3"
        android:text="@string/diagnose_network"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:layout_gravity="left">

        <LinearLayout
            android:id="@+id/network_ll_1"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/network_diagnose_bg_normal">
        <ImageView
            android:id="@+id/network_tv_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/network_diagnose_icon_helios_disabled"/>
        </LinearLayout>

        <com.ktc.networkdiagnose.view.LVCircularZoom
            android:id="@+id/lvzoom1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/network_ll_2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/network_diagnose_bg_normal">
            <ImageView
                android:id="@+id/network_router_iv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/network_diagnose_icon_network_disabled"/>
        </LinearLayout>

        <com.ktc.networkdiagnose.view.LVCircularZoom
            android:id="@+id/lvzoom2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/network_ll_3"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/network_diagnose_bg_normal">
            <ImageView
                android:id="@+id/network_server_iv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/network_diagnose_icon_internet_disabled"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="760dp"
        android:layout_height="80dp"
        android:background="@drawable/common_bg_list_normal"
        android:layout_gravity="left">

        <TextView
            android:id="@+id/network_tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_centerVertical="true"
            android:textColor="#424546"
            android:textSize="30sp"
            android:text="@string/diagnose_network_connect"/>

        <ImageView
            android:id="@+id/network_iv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:src="@drawable/network_icon_checkbox"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="760dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/common_bg_list_normal"
        android:layout_gravity="left">

        <TextView
            android:id="@+id/network_tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_centerVertical="true"
            android:textColor="#424546"
            android:textSize="30sp"
            android:text="@string/diagnose_network_dns"/>

        <ImageView
            android:id="@+id/network_iv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:src="@drawable/network_icon_checkbox"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="760dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="left"
        android:background="@drawable/common_bg_list_normal">

        <TextView
            android:id="@+id/network_tv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="15dp"
            android:textColor="#424546"
            android:textSize="30sp"
            android:text="@string/diagnose_network_server"/>

        <ImageView
            android:id="@+id/network_iv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:src="@drawable/network_icon_checkbox"
            android:visibility="gone"/>
    </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>